--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ button {
   border-radius: 8px;
   border: none;
   background-color: #4CAF50;
-  color: white;
+  color: rgb(53, 52, 52);
   cursor: pointer;
   transition: background-color 0.3s;
 }
