--- a/src/App.css
+++ b/src/App.css
@@ -162,11 +162,11 @@ button:disabled {
 }
 .upload-btn {
   padding: 8px 16px;
-  background-color: #a2a6a9;
-  color: rgb(30, 28, 28);
+  background-color: #2196F3;
+  color: white;
   border-radius: 4px;
   cursor: pointer;
- 
+  font-size: 14px;
 }
 
 .upload-btn:hover {
