--- a/src/pages/Trails.css
+++ b/src/pages/Trails.css
@@ -75,3 +75,10 @@
   color: #444;
   line-height: 1.5;
 }
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 300px;
+}
