change modal width

--- a/src/App.css
+++ b/src/App.css
@@ -326,3 +326,16 @@ button:disabled {
   gap: 30px;
   align-items: center;
 }
+
+.modal-content {
+  max-width: 90%;
+  width: 350px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 480px) {
+  .modal-content {
+    width: 85%;
+    padding: 15px;
+  }
+}
