--- a/src/styles/Track.css
+++ b/src/styles/Track.css
@@ -81,3 +81,10 @@
   height: 100%;
   width: 100%;
 }
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
