--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -110,18 +110,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2147483647;
+  z-index: 2000;
 }
 
-.login-modal {
-  background: white;
-  padding: 2rem;
-  border-radius: 8px;
-  width: 90%;
-  max-width: 400px;
-  position: relative;
-  z-index: 2147483647;
-}
+
 
 .login-options {
   display: flex;
