--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ button:disabled {
   text-align: left;
 }
 
-.map-container {
+.main-map-container {
   width: 90%;
   max-width: 800px;
   margin: 20px 0;
