--- a/src/styles/MainApp.css
+++ b/src/styles/MainApp.css
@@ -47,3 +47,14 @@
       padding: 15px;
     }
   }
+
+.main-map-container {
+  height: 400px;
+  width: 100%;
+  position: relative;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+}
